--- a/src/components/bookmark-icon/bookmark-icon.styles.scss
+++ b/src/components/bookmark-icon/bookmark-icon.styles.scss
@@ -1,14 +1,17 @@
+@import '../../styles/variables.scss';
+
 .bookmarkIconContainer {
 	position: absolute;
 	bottom: 2%;
 	left: 5%;
 
 	.bookmarkIconContainer__button-liked {
+		font-family: $secondary-font;
 		background: #a52d2d;
 		border: none;
-		border-radius: 50%;
-		padding: 8px;
-		font-size: 15px;
+		border-radius: 5px;
+		padding: 6px;
+		font-size: 12px;
 		color: #fff;
 		cursor: pointer;
 		transition: ease-in-out 0.4s;
@@ -20,9 +23,11 @@
 	}
 
 	.bookmarkIconContainer__button {
+		font-family: $secondary-font;
 		background: #4b4b4b;
+		font-size: 10px;
 		border: none;
-		border-radius: 50%;
+		border-radius: 5px;
 		padding: 5px;
 		color: #fff;
 		cursor: pointer;
