--- a/src/components/hide-resource-icon/hide-resource-icon.styles.scss
+++ b/src/components/hide-resource-icon/hide-resource-icon.styles.scss
@@ -1,14 +1,17 @@
+@import '../../styles/variables.scss';
+
 .hideResourceIconContainer {
 	position: absolute;
 	bottom: 2%;
 	right: 5%;
 
 	.hiddenResourcesIconContainer__button-hidden {
+		font-family: $secondary-font;
 		background: #a52d2d;
 		border: none;
-		border-radius: 50%;
+		border-radius: 5px;
 		padding: 3px;
-		font-size: 20px;
+		font-size: 12px;
 		color: #fff;
 		cursor: pointer;
 		transition: ease-in-out 0.4s;
@@ -20,9 +23,11 @@
 	}
 
 	.hiddenResourcesIconContainer__button {
+		font-family: $secondary-font;
 		background: #4b4b4b;
 		border: none;
-		border-radius: 50%;
+		border-radius: 5px;
+		font-size: 10px;
 		padding: 5px;
 		color: #fff;
 		cursor: pointer;
